# Cardiverse

./: .gitignore  LICENSE  README.md  create_game_code.py  create_gameplay_ai.py  pyproject.toml
GameCode/: pipeline.py
GameCode/debug/: ApplyEdits.py  ApplyEditsTestCases.py  ProposeEdits.py  debug_code.py  test_env.py
GameCode/retrieval/: naive_retrieval.py  prepare_indexing.py  retrieve.py  retrieve_snippets.py
GameCode/utils/: code_drafting.py  formatting.py  structure_description.py
GameCode/validation/: parse_validation.py  validate_env.py
GameEngine/: env.py  mini_env.py
GameEngine/utils/: base_agents.py  base_message.py  code.py  env_logger.py  game_run.py
GameplayAI/: create_agent.py  optimize_agent.py  run_game.py
GameplayAI/agents/: Belief_agent.py  CoT_agent.py  Gin_rummy_rule.py  Heuristic_ensemble_agent.py  Leduc_holdem_rule.py  ReAct_agent.py  Reflexion_agent.py  Uno_rule_agent.py  __init__.py
GameplayAI/utils/: batch_generate_eval.py  extract.py  get_action_desc.py  get_obs_dict_explain.py  load_agent.py  max_or_min.py  policy_design.py  q_func_design.py
Utils/: LLMHandler.py
data/code_generation/configs/: default.yaml  no_validation.yaml  o1preview_no_validation.yaml  recommended.yaml
data/code_generation/example_lib/: baccarat.md  baccarat.py  boat-house-rum.md  boat-house-rum.py  bull-poker.py  california-jack.py  crazy-eights.md  crazy-eights.py
data/gameplay_ai_generation/examples/baccarat/: baccarat.py
data/gameplay_ai_generation/examples/boat-house-rum/: boat-house-rum.py
data/gameplay_ai_generation/examples/uno/: uno.md  (+1 more)
(+251 files in other folders)
